--- a/android/build.gradle
+++ b/android/build.gradle
@@ -52,6 +52,9 @@ android {
     dependencies {
         testImplementation 'org.jetbrains.kotlin:kotlin-test'
         testImplementation 'org.mockito:mockito-core:5.0.0'
+
+        implementation 'com.google.android.material:material:1.6.1'
+        implementation 'com.helpshift:helpshift-sdkx:10.2.2'
     }
 
     testOptions {
