--- a/android/build.gradle
+++ b/android/build.gradle
@@ -55,6 +55,7 @@ android {
 
         implementation 'com.google.android.material:material:1.6.1'
         implementation 'com.helpshift:helpshift-sdkx:10.2.2'
+        implementation 'com.google.firebase:firebase-messaging:20.1.0'
     }
 
     testOptions {
