--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -39,4 +39,7 @@
             </intent-filter>
         </service>
     </application>
+
+    <!-- helpshift_wrapper -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 </manifest>
