--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   fluttertoast: ^8.1.2
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   integration_test:
