--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+	<!-- helpshift_wrapper -->
+    <key>HelpShiftDomain</key>
+    <string>$(HELP_SHIFT_DOMAIN)</string>
+    <key>HelpShiftIosAppId</key>
+    <string>$(HELP_SHIFT_IOS_APP_ID)</string>
 </dict>
 </plist>
