--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:label="helpshift_wrapper_example"
-        android:name="${applicationName}"
+        android:name="com.app.helpshift_wrapper_example.MainApplication"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
@@ -29,5 +29,17 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+        <!-- helpshift_wrapper -->
+        <service
+            android:name="com.app.helpshift_wrapper.HelpshiftMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
+
+    <!-- helpshift_wrapper -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 </manifest>
